# master_thesis

./: .gitignore  README.md
legacy_code/: README.md  analyse.sh  evaluate.sh  evaluate_and_analyse.sh  ft_evaluate_analyse.sh  llama_32_lora_run_1_epoch_4_20250107_181729_evaluate_out.txt  llama_33_70B_vanilla_prompt_20250107_175207_evaluate_out.txt  mof_dataset_labeled_M.csv  multiple_evals.sh  multiple_evals_2.sh  new_batch_eval.sh  pip_list_out.txt  prompt_results.txt  prompt_test.sh  pyproject.toml  setup.sh  shell.nix  stats_llama_33_70B_vanilla_prompt_20250107_175207.yml  torchtune_pip_list_out.txt  vanilla_eval.sh  vanilla_eval_2.sh  vanilla_eval_3.sh  vis_test.txt
legacy_code/backup/: haicore.yml  stats.yml  stats_aa_env_comparison_new_20250106_160811.yml  stats_aa_env_comparison_new_20250106_162551.yml  stats_aa_env_comparison_new_20250106_163044.yml  stats_aa_env_comparison_new_20250106_163420.yml  stats_aa_env_comparison_new_20250106_163853.yml  stats_aa_env_comparison_old_20250106_161222.yml  stats_eval_test_20250102_230614.yml  stats_eval_test_20250102_232402.yml  stats_eval_test_20250103_002829.yml  stats_eval_test_20250103_013523.yml  stats_eval_test_20250103_191739.yml  stats_eval_test_20250105_143706.yml  stats_eval_test_20250105_144149.yml  stats_eval_test_20250105_144417.yml  stats_eval_test_20250105_185611.yml  stats_eval_test_20250105_204406.yml  stats_eval_test_20250105_204850.yml  stats_fourth_prompt_test_0_20250105_105540.yml  stats_fourth_prompt_test_1_20250105_114400.yml  stats_fourth_prompt_test_2_20250105_123237.yml  stats_haicore_prompt_0.yml  (+54 more)
(+2769 files in other folders)
